KSCM-1763 - Added code for spacing issue in find course proposal.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-lum/trunk@66997 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
+++ b/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
@@ -74,30 +74,11 @@
     line-height: 15px;
 }
 
-/*
-.ks-cm-find-course-proposal .uif-gridLayout th[scope="row"] {
-    text-align: right;
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+.ks-cm-find-course-proposal .uif-tableCollectionLayout{
+    padding-top: 10px;
 }
 
-.ks-cm-find-course-proposal .uif-gridLayout th,
-.ks-cm-find-course-proposal .uif-tableCollectionLayout th {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
-}
-
-.ks-cm-find-course-proposal .uif-gridLayout td,
-.ks-cm-find-course-proposal .uif-inputField input:first-child {
-    margin-bottom: 0;
-    width: 100%;
-}
-
-.ks-cm-find-course-proposal .ks-uif-footer div {
-    float: none;
-    margin-left: 356px;
-    white-space: nowrap;
-} */
-
-
+/* find course proposal end */
 
 
 .tree-bar-button {
